dtor/tests/errors/dtor_bad.rs
use dtor::dtor;

// Unknown form of attribute
#[dtor(unknown-attribute)]
fn foo() {
}

fn main() {
}